# skribly

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-design-asset.yml
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/core/: coordinator.rs  mod.rs  models.rs  storage.rs
apps/desktop/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
assets/design/: .repair-trigger  .repair-trigger-note  README.md  full-resolution-design-note.md  full-resolution-upload-instructions.txt
assets/icons/: README.md
assets/marketing/: README.md
docs/00-product/: NAMING_AND_LANGUAGE.md  PRD.md  PRODUCT_VISION.md
docs/01-design/: ACCESSIBILITY.md  COMPONENT_INVENTORY.md  DESIGN_DIRECTION.md  INTERACTION_SPEC.md
docs/02-engineering/: ARCHITECTURE.md  CONTEXT_ANCHORING.md  PERFORMANCE_BUDGET.md  PLATFORM_PERMISSIONS.md  TECH_STACK_OPTIONS.md  TEST_STRATEGY.md
docs/03-business/: INDIA_GST_TAX_NOTES.md  PAYMENT_OPTIONS.md  PRICING_AND_MONETIZATION.md  STORE_DISTRIBUTION.md
docs/04-legal-privacy/: PRIVACY_AND_SECURITY.md  RELEASE_LEGAL_CHECKLIST.md
docs/05-research/: COMPETITOR_LANDSCAPE.md  RESEARCH_SOURCES.md
docs/06-planning/: DECISION_LOG.md  RISKS_AND_GATES.md  ROADMAP.md
(+39 files in other folders)
